[package]
name = "tree-snapshot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to create and manage snapshots of directory trees."
homepage = "https://github.com/schwa/tree-snapshot-rs"
repository = "https://github.com/schwa/tree-snapshot-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.6", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
crypto-hash = "0.3.4"
csv = "1.3.0"
fern = { version = "0.6.2", features = ["colored"] }
hex = "0.4.3"
human_format = "1.1.0"
humansize = "2.1.3"
humantime = "2.1.0"
indicatif = "0.17.8"
iso8601 = { version = "0.6.1", features = ["serde"] }
json5 = "0.4.1"
jwalk = "0.8.1"
log = "0.4.21"
memmap = "0.7.0"
normpath = "1.2.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
relative-path = "1.9.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
signal-hook = "0.3.17"
threadpool = "1.8.1"
users = "0.11.0"
walkdir = "2.5.0"
xattr = "1.3.1"
